Added comments to functionality to all relevant files

--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -1,9 +1,11 @@
+<!-- Layout for the contact list screen -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!-- ListView to display contacts -->
     <ListView
         android:id="@+id/contact_list_view"
         android:layout_width="match_parent"
