--- a/app/src/main/res/layout/activity_congratulations.xml
+++ b/app/src/main/res/layout/activity_congratulations.xml
@@ -1,3 +1,4 @@
+<!-- Layout for the "Congratulations" screen -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -6,6 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <!-- Centered message -->
     <TextView
         android:layout_width="272dp"
         android:layout_height="wrap_content"
