--- a/app/src/main/res/layout/list_item_contact.xml
+++ b/app/src/main/res/layout/list_item_contact.xml
@@ -1,3 +1,4 @@
+<!-- Layout for the contact items in the list -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -5,6 +6,7 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
+    <!-- Contact image -->
     <ImageView
         android:id="@+id/contact_image"
         android:layout_width="64dp"
@@ -12,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:scaleType="centerCrop" />
 
+    <!-- Contact details: name, phone, email -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
